Fixed collapse issue hopefully

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,6 @@ body {
     background-color: rgba(150,150,150,0.5);
     height: 88vh;
     top: 60px;
-    width: 50vw;
     z-index: 1;
     right: 0;
 }
