--- a/css/profile.css
+++ b/css/profile.css
@@ -44,3 +44,7 @@ body {
 #cEmail {
     padding-top: 100px;
 }
+
+#login {
+    display: none;
+}
